--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <div class="section-body feature">
             <div class="feature-item">
               <div class="feature-image-wrapper">
-              <video width="400px" heigth="500px" src="img/works/kitune.mp4" controls>
+              <video width="350px" heigth="500px" src="img/feature/kitune.mp4" controls>
               </video></a>
 
                       <figcaption class="works-body">
