--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           </div>
           <div class="feature-body">
             <p>
-              <span class="text-bold">概要：</span><br>java言語を使ったサイコロプログラム　<a class="works-url-link" href="https://pirai0621.github.io/src/RandomDemo.java" target="_blank">ソースコード</a></p>
+              <span class="text-bold">概要：</span><br>java言語を使ったサイコロプログラム</span><br><a class="works-url-link" href="https://pirai0621.github.io/src/RandomDemo.java" target="_blank">ソースコード</a></p>
             <p><span class="text-bold">コメント：</span><br>サイコロを2つ使った時の合計値を表にまとめるプログラムです。
             <br>カタンというボードゲームをしていた時に「全然確率どうりにならない！」と思い制作いたしました。
             </p>
@@ -244,7 +244,7 @@
                   <div class="skill-rating rating">
 
                   </div>
-                  <p>javascriptやゲーム制作に使えると思い勉強しました簡単なモデリングを行えます。</p>
+                  <p>javascriptやゲーム制作に使えると思い勉強しました。簡単なモデリングを行えます。</p>
                 </div>
               
                 </div>
