--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
               </div>
               <div class="about-body">
                 <p>
-                  初めまして！中島直哉と申します。4年間理容師、美容師をしていました！趣味はボードゲームとランニングです。死ぬまで成長し続けたいです！
+                  初めまして！中島直哉と申します。4年間理容師、美容師をしていました！趣味はボードゲームとランニングです。ITは未経験ですがこれからどんどん経験を積んで世の中に自分の作ったものを広めていきたいです。
                 </p>
                 <p>
                  保有資格：理容師免許、美容師免許、ITパスポート
